--- a/shadowsocks-csharp/shadowsocks-csharp.csproj
+++ b/shadowsocks-csharp/shadowsocks-csharp.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="3rd\Costura.Fody.3.1.4\build\Costura.Fody.props" Condition="Exists('3rd\Costura.Fody.3.1.4\build\Costura.Fody.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -66,12 +67,11 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Caseless, Version=0.0.0.0, Culture=neutral, PublicKeyToken=409b3227471b0f0d, processorArchitecture=MSIL">
-      <HintPath>3rd\Caseless.Fody.1.7.3\lib\net452\Caseless.dll</HintPath>
+    <Reference Include="Caseless, Version=1.8.2.0, Culture=neutral, PublicKeyToken=409b3227471b0f0d, processorArchitecture=MSIL">
+      <HintPath>3rd\Caseless.Fody.1.8.2\lib\net452\Caseless.dll</HintPath>
     </Reference>
-    <Reference Include="Costura, Version=1.6.2.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
-      <HintPath>3rd\Costura.Fody.1.6.2\lib\dotnet\Costura.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Costura, Version=3.1.4.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
+      <HintPath>3rd\Costura.Fody.3.1.4\lib\net46\Costura.dll</HintPath>
     </Reference>
     <Reference Include="GlobalHotKey, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>3rd\GlobalHotKey.1.1.0\lib\GlobalHotKey.dll</HintPath>
@@ -79,8 +79,8 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>3rd\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>3rd\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -92,11 +92,11 @@
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.XML" />
     <Reference Include="WindowsBase" />
-    <Reference Include="zxing, Version=0.16.2.0, Culture=neutral, PublicKeyToken=4e88037ac681fe60, processorArchitecture=MSIL">
-      <HintPath>3rd\ZXing.Net.0.16.2\lib\net461\zxing.dll</HintPath>
+    <Reference Include="zxing, Version=0.16.4.0, Culture=neutral, PublicKeyToken=4e88037ac681fe60, processorArchitecture=MSIL">
+      <HintPath>3rd\ZXing.Net.0.16.4\lib\net461\zxing.dll</HintPath>
     </Reference>
-    <Reference Include="zxing.presentation, Version=0.16.2.0, Culture=neutral, PublicKeyToken=4e88037ac681fe60, processorArchitecture=MSIL">
-      <HintPath>3rd\ZXing.Net.0.16.2\lib\net461\zxing.presentation.dll</HintPath>
+    <Reference Include="zxing.presentation, Version=0.16.4.0, Culture=neutral, PublicKeyToken=4e88037ac681fe60, processorArchitecture=MSIL">
+      <HintPath>3rd\ZXing.Net.0.16.4\lib\net461\zxing.presentation.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -222,22 +222,32 @@
     <Compile Include="View\StatisticsStrategyConfigurationForm.Designer.cs">
       <DependentUpon>StatisticsStrategyConfigurationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="_SSD\Controller\Service\UpdateChecker\UpdateChecker.cs" />
     <Compile Include="_SSD\Controller\ShadowsocksController.cs" />
-    <Compile Include="_SSD\Controller\Strategy\StatisticsStrategy.cs" />
-    <Compile Include="_SSD\Model\Configuration.cs" />
-    <Compile Include="_SSD\Model\Server.cs" />
-    <Compile Include="_SSD\Model\Subscription.cs" />
-    <Compile Include="_SSD\Program.cs" />
-    <Compile Include="_SSD\Controller\Service\UpdateChecker.cs" />
-    <Compile Include="_SSD\Util\Util.cs" />
-    <Compile Include="_SSD\View\ConfigForm.cs">
+    <Compile Include="_SSD\Model\Configuration\Configuration.cs" />
+    <Compile Include="_SSD\Model\Configuration\Private.cs" />
+    <Compile Include="_SSD\Model\Configuration\Public.cs" />
+    <Compile Include="_SSD\Model\Server\Interface.cs" />
+    <Compile Include="_SSD\Model\Server\Public.cs" />
+    <Compile Include="_SSD\Model\Server\Server.cs" />
+    <Compile Include="_SSD\Model\Subscription\Interface.cs" />
+    <Compile Include="_SSD\Model\Subscription\Public.cs" />
+    <Compile Include="_SSD\Model\Subscription\Subscription.cs" />
+    <Compile Include="_SSD\Program\Program.cs" />
+    <Compile Include="_SSD\Util\Util\Util.cs" />
+    <Compile Include="_SSD\View\ConfigForm\ConfigForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="_SSD\View\MenuViewController.cs" />
-    <Compile Include="_SSD\View\SubscriptionManagementForm.cs">
+    <Compile Include="_SSD\View\MenuViewController\MenuViewController.cs" />
+    <Compile Include="_SSD\View\MenuViewController\Private.cs" />
+    <Compile Include="_SSD\View\MenuViewController\Public.cs" />
+    <Compile Include="_SSD\View\SubscriptionManagementForm\Private.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="_SSD\View\SubscriptionManagementForm.Designer.cs">
+    <Compile Include="_SSD\View\SubscriptionManagementForm\SubscriptionManagementForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="_SSD\View\SubscriptionManagementForm\SubscriptionManagementForm.Designer.cs">
       <DependentUpon>SubscriptionManagementForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="View\ConfigForm.resx">
@@ -267,7 +277,7 @@
     <EmbeddedResource Include="View\StatisticsStrategyConfigurationForm.resx">
       <DependentUpon>StatisticsStrategyConfigurationForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="_SSD\View\SubscriptionManagementForm.resx">
+    <EmbeddedResource Include="_SSD\View\SubscriptionManagementForm\SubscriptionManagementForm.resx">
       <DependentUpon>SubscriptionManagementForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
@@ -337,6 +347,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <UsingTask TaskName="CosturaCleanup" AssemblyFile="$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll" TaskFactory="CodeTaskFactory">
     <ParameterGroup>
@@ -374,15 +385,16 @@ foreach (var item in filesToCleanup)
   <Target Name="CleanReferenceCopyLocalPaths" AfterTargets="AfterBuild;NonWinFodyTarget">
     <CosturaCleanup Config="FodyWeavers.xml" Files="@(ReferenceCopyLocalPaths->'$(OutDir)%(DestinationSubDirectory)%(Filename)%(Extension)')" />
   </Target>
-  <Import Project="3rd\Fody.2.3.23\build\Fody.targets" Condition="Exists('3rd\Fody.2.3.23\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('3rd\Fody.2.3.23\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '3rd\Fody.2.3.23\build\Fody.targets'))" />
-    <Error Condition="!Exists('3rd\Costura.Fody.1.6.2\build\dotnet\Costura.Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '3rd\Costura.Fody.1.6.2\build\dotnet\Costura.Fody.targets'))" />
+    <Error Condition="!Exists('3rd\Costura.Fody.3.1.4\build\Costura.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', '3rd\Costura.Fody.3.1.4\build\Costura.Fody.props'))" />
+    <Error Condition="!Exists('3rd\Costura.Fody.3.1.4\build\Costura.Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '3rd\Costura.Fody.3.1.4\build\Costura.Fody.targets'))" />
+    <Error Condition="!Exists('3rd\Fody.3.2.7\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '3rd\Fody.3.2.7\build\Fody.targets'))" />
   </Target>
-  <Import Project="3rd\Costura.Fody.1.6.2\build\dotnet\Costura.Fody.targets" Condition="Exists('3rd\Costura.Fody.1.6.2\build\dotnet\Costura.Fody.targets')" />
+  <Import Project="3rd\Costura.Fody.3.1.4\build\Costura.Fody.targets" Condition="Exists('3rd\Costura.Fody.3.1.4\build\Costura.Fody.targets')" />
+  <Import Project="3rd\Fody.3.2.7\build\Fody.targets" Condition="Exists('3rd\Fody.3.2.7\build\Fody.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
