--- a/shadowsocks-csharp/shadowsocks-csharp.csproj
+++ b/shadowsocks-csharp/shadowsocks-csharp.csproj
@@ -222,28 +222,28 @@
     <Compile Include="View\StatisticsStrategyConfigurationForm.Designer.cs">
       <DependentUpon>StatisticsStrategyConfigurationForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="_SSD\Controller\Service\UpdateChecker\Public.cs" />
+    <Compile Include="_SSD\Controller\Service\UpdateChecker\UpdateChecker.Public.cs" />
     <Compile Include="_SSD\Controller\Service\UpdateChecker\UpdateChecker.cs" />
     <Compile Include="_SSD\Controller\ShadowsocksController\ShadowsocksController.cs" />
     <Compile Include="_SSD\Model\Configuration\Configuration.cs" />
-    <Compile Include="_SSD\Model\Configuration\Private.cs" />
-    <Compile Include="_SSD\Model\Configuration\Public.cs" />
-    <Compile Include="_SSD\Model\Server\Interface.cs" />
-    <Compile Include="_SSD\Model\Server\Public.cs" />
+    <Compile Include="_SSD\Model\Configuration\Configuration.Private.cs" />
+    <Compile Include="_SSD\Model\Configuration\Configuration.Public.cs" />
+    <Compile Include="_SSD\Model\Server\Server.Interface.cs" />
+    <Compile Include="_SSD\Model\Server\Server.Public.cs" />
     <Compile Include="_SSD\Model\Server\Server.cs" />
-    <Compile Include="_SSD\Model\Subscription\Interface.cs" />
-    <Compile Include="_SSD\Model\Subscription\Public.cs" />
+    <Compile Include="_SSD\Model\Subscription\Subscription.Interface.cs" />
+    <Compile Include="_SSD\Model\Subscription\Subscription.Public.cs" />
     <Compile Include="_SSD\Model\Subscription\Subscription.cs" />
     <Compile Include="_SSD\Program\Program.cs" />
-    <Compile Include="_SSD\Util\Util\Public.cs" />
+    <Compile Include="_SSD\Util\Util\Util.Public.cs" />
     <Compile Include="_SSD\Util\Util\Util.cs" />
     <Compile Include="_SSD\View\ConfigForm\ConfigForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="_SSD\View\MenuViewController\MenuViewController.cs" />
-    <Compile Include="_SSD\View\MenuViewController\Private.cs" />
-    <Compile Include="_SSD\View\MenuViewController\Public.cs" />
-    <Compile Include="_SSD\View\SubscriptionManagementForm\Private.cs">
+    <Compile Include="_SSD\View\MenuViewController\MenuViewController.Private.cs" />
+    <Compile Include="_SSD\View\MenuViewController\MenuViewController.Public.cs" />
+    <Compile Include="_SSD\View\SubscriptionManagementForm\SubscriptionManagementForm.Private.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="_SSD\View\SubscriptionManagementForm\SubscriptionManagementForm.cs">
